create build, app ready for deployment

--- a/react_ws_src/src/sass/ttt.scss
+++ b/react_ws_src/src/sass/ttt.scss
@@ -146,7 +146,7 @@ section#TTT_game{
 
 			&:hover{
 				// background: #ff0;
-				background: #5677aa;
+				background: #5eccff;
 			}
 
 			&.win {
